5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1593_1804.log
== TEST (2019-03-28 10:44:58) 
-- CODE:
from math import *

corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A: "))

corB1 = float(input("Digite aqui a primeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

dAB = sqrt(((corB1 - corA1) ** 2) + ((corB2 - corA2) ** 2))

print(dAB)
-- OUTPUT:
30.479501308256342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:45:10) 
-- CODE:
from math import *

corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A: "))

corB1 = float(input("Digite aqui a primeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

dAB = sqrt(((corB1 - corA1) ** 2) + ((corB2 - corA2) ** 2))

print(dAB)
-- EXECUTION TIME:
0.170339
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.479501308256342
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773084924772409
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.1395541084682708
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:27) 
-- CODE:
from math import *

corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A: "))

corB1 = float(input("Digite aqui a primeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

dAB = sqrt(((corB1 - corA1) ** 2) + ((corB2 - corA2) ** 2))

print(round(dAB, 3)
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:34) 
-- CODE:
from math import *

corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A: "))

corB1 = float(input("Digite aqui a primeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

dAB = sqrt(((corB1 - corA1) ** 2) + ((corB2 - corA2) ** 2))

print(round(dAB, 3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:45:43) 
-- CODE:
from math import *

corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A: "))

corB1 = float(input("Digite aqui a primeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

dAB = sqrt(((corB1 - corA1) ** 2) + ((corB2 - corA2) ** 2))

print(round(dAB, 3))
-- EXECUTION TIME:
0.239774
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
